test/files/invalid/invalid_prefix.stderr
error: Cannot use prefix sign on lists
  ┌─ test/files/invalid/invalid_prefix.fbs:2:16
  │
2 │   x0: [bool] = +[];
  │                ^^^

error: Cannot use prefix sign on booleans
  ┌─ test/files/invalid/invalid_prefix.fbs:3:14
  │
3 │   x1: bool = +true;
  │              ^^^^^

error: Cannot use prefix sign on null
  ┌─ test/files/invalid/invalid_prefix.fbs:4:15
  │
4 │   x2: uint8 = +null;
  │               ^^^^^

error: Cannot use prefix sign on strings
  ┌─ test/files/invalid/invalid_prefix.fbs:5:16
  │
5 │   x3: string = +"hello";
  │                ^^^^^^^^

error: Cannot use prefix sign on constants
  ┌─ test/files/invalid/invalid_prefix.fbs:6:15
  │
6 │   x4: float = +Hello;
  │               ^^^^^^

